--- a/OCRC/Views/Home/Result.cshtml
+++ b/OCRC/Views/Home/Result.cshtml
@@ -4,24 +4,21 @@
     ViewBag.Title = "Sport Search";
 }
 
-@{ 
-    var dbContext = new OCRC.Models.OCRCDbContext();
-    String s = dbContext.Rankings.Find(1).sportType;
-    ViewBag.Title = s;
-}
 <script>
 
-    $(function () {
-        $('#btnDD').on("click", function () {
+    $(function () { // on click changed to a timeout
+        $('#btnDD').on("click", function () { //rename Id's to be self descriptive.
             $.ajax({
                 type: "POST",
-                url: '@Url.Action("notMyAction")',
+                url: '@Url.Action("notMyAction")', //better action name
                 data: { 'value': $('#txtName').val() }, //pass your filters here, variable name in the controller should be named value
                 datatype: 'json',
                 cache: false,
                 success: (data) => {
                     //$('#txtName').val(data.n); //set the value of whats in the box with the id txtName
-                    buildTableBody(data);
+                    console.log(data.n);
+                    clearTableBody();
+                    data.n.forEach(buildTableBody);
                 }
 
             })
@@ -29,34 +26,36 @@
         });
     });
 
-    //TODO: Call the function when the user starts searching or filtering.
-    //TODO: Complete implementing the Json action.
+    function getFilters() {
+        //sports
+        //age
+        //grade
 
-
-    //IN PROGRESS...
-    function buildTableBody(searchItem) {
-        document.getElementById("SearchResults").innerHTML = 
-            "<tr>" +
-            "<td>" + searchItem+ "<td>" +
-
-        "<tr>";
-
-        //            <tr>
-       //        <th scope="row">num</th>num++
-       //        <td>item.fname</td>
-       //        <td>item.lname</td>
-       //        <td>item.year</td>
-       //        <td>item.rank[0].rank</td>
-       //        <td>item.age</td>
-       //        <td>item.school</td>
-       //        <td>item.grade</td>
-       //
-       //
-       //    </tr>
-
+        //call this in the data section of the ajax call? must handle nulls ! OR return an object either way that gets checked int he controller
+        //return { 'sport': sport filter values, 'age':ages filter values, 'grade' :grade filter values }
     }
 
+    //TODO: Call the function when the user starts searching or filtering.
 
+
+    function clearTableBody() {
+        document.getElementById("SearchResults").innerHTML = "";
+    }
+
+    //IN PROGRESS...
+    function buildTableBody(searchItems) {
+        document.getElementById("SearchResults").innerHTML += 
+        "<tr>" + "<td>" + "</td>"+
+        "<td>" + searchItems.fname + "</td>" +
+        "<td>" + searchItems.lname + "</td>" +
+        "<td>" + searchItems.year + "</td>" +
+        "<td>" + searchItems.rank[0].rank + "</td>" +
+        "<td>" + searchItems.age + "</td>" +
+        "<td>" + searchItems.school + "</td>" +
+        "<td>" + searchItems.grade + "</td>" +
+        "</tr>";
+
+    }
 
 </script>
 
