--- a/OCRC/Views/Account/ForgotPassword.cshtml
+++ b/OCRC/Views/Account/ForgotPassword.cshtml
@@ -20,6 +20,7 @@
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
+    <h2>@ViewBag.Message</h2>
     <div class="form-gap"></div>
     <div class="container">
     <div class="row">
